# LMS_Portal

./: .env.example  .gitignore  README.md  TODO.md  docker-compose.yml  package-lock.json
backend-go/: Dockerfile  go.mod  go.sum  main.go
backend-rust/: Cargo.toml  Dockerfile
backend-rust/src/: main.rs
blockchain/: foundry.toml  hardhat.config.js  package-lock.json  package.json
blockchain/contracts/: CertNFT.sol
blockchain/script/: CertNFT.s.sol
blockchain/scripts/: deploy.js
db/: supabase.sql
frontend/: middleware.ts  next-env.d.ts  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/courses/: page.tsx
frontend/app/labs/: page.tsx
frontend/app/leaderboard/: page.tsx
frontend/app/sign-in/[[...sign-in]]/: page.tsx
frontend/app/sign-up/[[...sign-up]]/: page.tsx
frontend/components/: Navbar.tsx  VideoPlayer.tsx  providers.tsx
frontend/lib/: auth-context.tsx
infra/: main.tf
