[package]
name = "lms-backend-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lms-backend-rust"
path = "src/main.rs"

[dependencies]
actix-web = "4.5"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
docker-api = "0.13.0"
anyhow = "1.0"
actix-web-actors = "4.2"

